[gd_scene load_steps=9 format=3 uid="uid://bs6eigat3lyci"]

[ext_resource type="Script" path="res://Scripts/Gameplay/pick_up.gd" id="1_8536p"]
[ext_resource type="Script" path="res://Scripts/GameEffects/NodeShaker.gd" id="1_pepgg"]
[ext_resource type="Script" path="res://Scripts/GameEffects/visual_holder.gd" id="2_ou272"]
[ext_resource type="Material" uid="uid://dtq71w580dncu" path="res://Assets/Materials/Gameplay/BasePrototype_Blue.tres" id="3_2cxck"]

[sub_resource type="Curve" id="Curve_jkujo"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_h88sd"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.497717, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_ks33j"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_grp2q"]
size = Vector3(0.192627, 0.344116, 1)

[node name="AmmoItem" type="Node3D"]
script = ExtResource("1_8536p")
destroyDelay = 0.05

[node name="VisualHolder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("2_ou272")
positionTime = 2.0
positionTarget = Vector3(0, 0.1, 0)
positionCurveX = SubResource("Curve_jkujo")
positionCurveY = SubResource("Curve_h88sd")
positionCurveZ = SubResource("Curve_ks33j")

[node name="Visual" type="Node3D" parent="VisualHolder"]

[node name="NodeShaker" type="Node3D" parent="VisualHolder/Visual" node_paths=PackedStringArray("nodeToShake")]
script = ExtResource("1_pepgg")
nodeToShake = NodePath(".")
magnitude = 0.02
shakeTime = 0.1
frequency = 1.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="VisualHolder/Visual/NodeShaker"]
radius = 0.05
height = 0.2
material = ExtResource("3_2cxck")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_grp2q")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
